Skip omnibox default match update check when input is from omnibox focus

Previously we would avoid this check for the ZeroSuggestProvider
specifically, but it should be avoided in all cases where the omnibox input
was not created by the user.

This change also fixes a bug on iOS where selecting an autocomplete
suggestion after deleting the auto-filled input text would cause this check
to fail.

BUG=642506

Review-Url: https://codereview.chromium.org/2295043005
Cr-Commit-Position: refs/heads/master@{#415993}

Former-commit-id: cd3f511431f2ac322a69d024b20ae012c9f21a92